// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Galaxy Extension should match snapshot 1`] = `
Object {
  "Description": "Cosmos Galaxy Extension: App resources dependant on each Aws Account.",
}
`;

exports[`Galaxy should match snapshot 1`] = `
Object {
  "Description": "Cosmos Galaxy: Resources dependant on each Aws Account, like ShareVpc and CrossAccountRoles.",
}
`;

exports[`Galaxy should match snapshot 2`] = `
Object {
  "Description": "Cosmos Galaxy: Resources dependant on each Aws Account, like ShareVpc and CrossAccountRoles.",
  "Resources": Object {
    "CdkCrossAccountRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "arn:aws:iam::account:role/CoreCdkMasterRole",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AdministratorAccess",
              ],
            ],
          },
        ],
        "RoleName": "CoreCdkCrossAccountRole",
        "Tags": Array [
          Object {
            "Key": "cosmos",
            "Value": "Cos",
          },
          Object {
            "Key": "cosmos:galaxy",
            "Value": "Gal2",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
